--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,3 @@
-body {
-  background: red;
+html, body, .container-fluid, .container-fluid > .col-md-4, .ace_editor, #results, .jasmine_html-reporter {
+  height: 100%;
 }
