--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,36 @@
 
 .container {
   display: flex;
+  flex-direction: column;
+}
+
+.workspace {
+  display: flex;
+  flex: 1;
   justify-content: space-around;
   align-items: stretch;
+}
+
+.header {
+  background: #BD1550;
+  padding: 15px;
+  color: white;
+  border-bottom: 10px solid #E97F02;
+}
+
+.col-header {
+  background: #F8CA00;
+  padding: 10px 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 1.3em;
+}
+
+h2 {
+  font-size: 0.9em;
 }
 
 .col {
@@ -21,4 +49,8 @@
 .col-body {
   background: green;
   flex: 1;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Oswald', sans-serif;
 }
